Fixed nav links left and right margins to 10px so overflow happens less.

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -241,7 +241,7 @@ img.main{
     background-image:url(../images/Adventures.png);
 }
 .nav a{
-    margin: 5px 12px;
+    margin: 5px 10px;
     color:rgba(0,0,0,0);
 }
 
